kubernetes/base/ingress/asset-strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: asset-strip-prefix
  namespace: ops-platform

spec:
  stripPrefix:
    prefixes:
      - /api/assets
