kubernetes/base/ingress/asset-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: asset-ingress
  namespace: ops-platform
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: ops-platform-asset-strip-prefix@kubernetescrd

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /api/assets
            pathType: Prefix
            backend:
              service:
                name: asset-service
                port:
                  number: 8000
