kubernetes/base/ingress/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: auth-ingress
  namespace: ops-platform
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: ops-platform-auth-strip-prefix@kubernetescrd

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
